--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,7 @@ body {
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-variant-emoji: normal;
 }
 
 /* Typography */
